tests/ui/async-await/async-fn/dyn-in-return-type.stderr
error[E0746]: return type cannot be a trait object without pointer indirection
  --> $DIR/dyn-in-return-type.rs:3:38
   |
LL |   async fn f() -> dyn core::fmt::Debug {
   |  ______________________________________^
...  |
LL | | }
   | |_^ doesn't have a size known at compile-time
   |
help: consider returning an `impl Trait` instead of a `dyn Trait`
   |
LL | async fn f() -> dyn core::fmt::Debug impl {
   |                                      ++++
help: alternatively, box the return type, and wrap all of the returned values in `Box::new`
   |
LL ~ async fn f() -> dyn core::fmt::Debug Box<dyn {
LL |
...
LL |     loop {}
LL ~ }>
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0746`.
